# dicomConnectorProjet

./: DicomConnector.vpp  DicomConnector.vpp~6  DicomConnector.vpp~7
src/: CEPContent.xml  CMakeLists.txt  COPYRIGHT  FindCamiTK.cmake  README
src/actions/: CMakeLists.txt
src/actions/dicomconnector/: CMakeLists.txt  CreateDcmDirectory.cpp  CreateDcmDirectory.h  DicomConnector.cpp  DicomConnector.h  DoConnection.cpp
src/actions/dicomconnector/resources/: translate_dicomconnector.qrc
src/actions/doconnectionextension/: CMakeLists.txt  DoConnection.cpp  DoConnection.h  DoConnectionExtension.cpp  DoConnectionExtension.h
src/actions/doconnectionextension/resources/: translate_doconnectionextension.qrc
src/components/: CMakeLists.txt
src/components/dicomconnector/: CMakeLists.txt  DicomConnector.cpp  DicomConnector.h  DicomConnectorComponent.cpp  DicomConnectorComponent.h
src/components/dicomconnector/testdata/: empty.dcm
src/libraries/: CMakeLists.txt
